<resources>
    <string name="app_name">Online Purchase</string>
    <string name="welcome">Welcome to Happy Shopping!</string>
    <string name="logincustomer">Login as Customer</string>
    <string name="logincsr">Login as CSR</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Log in</string>
    <string name="order">Order</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kid">Kids</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="selectDetails">Select Size and Quantity</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="postal_code">Postal code:</string>
    <string name="new_costumer_sign_up">New customer sign up</string>
    <string name="customer_sign_up">Customer sign up</string>
    <string name="csr_sign_up">CSR sign up</string>
    <string name="orders">Orders</string>
    <string name="orderdetails">Your Order Details</string>
    <string name="pieces">pieces of</string>
    <string name="size">size</string>
    <string name="shoe">shoe</string>
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="price">Price:</string>
    <string name="save">Save</string>
    <string name="add_new_shoes">Add new shoes</string>
    <string name="plus">+</string>
    <string name="shoes">Shoes</string>
    <string name="status">Status:</string>
    <string name="quantity">Quantity:</string>
    <string name="item_name">Item name:</string>
    <string name="shoes_type">Shoes type:</string>
    <string name="dear">Dear,</string>
    <string name="available_shoes">Available Shoes</string>
    <string name="shoes_size">Shoes size:</string>
    <string name="your_orders">Your orders</string>
    <string name="new_order">New Order</string>
    <string name="signout">Sign Out</string>
    <string name="shoes_in_order">Shoes in Order</string>
    <string name="back">Back</string>
    <string name="backarrow"> ← </string>
    <string name="shoes_in_shop"> Shoes in Happy Shop </string>
    <string name="pending_orders"> Pending Orders </string>
    <string name="welcome_to_happy_shopping">Welcome to Happy Shopping!</string>
    <string name="customers_orders">Customer`s orders</string>
    <string name="new_csr_sign_up">New CSR sign up</string>
    <string name="your_orders">Your orders</string>
</resources>
