<?xml version="1.0" encoding="utf-8"?>

<!-- TableLayout declaration-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="1"
             tools:context=".MainActivity"
             android:background="@android:color/holo_blue_light">

    <!--Welcome Message -->

    <ImageView
            android:layout_width="354dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/shoplogo"/>

    <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Welcome to Happy Shopping!"
            android:textSize="20dp"/>

    <!-- Row declarations within the TableLayout.-->

    <!--Namings were done by row-wise
       Such as, r1textView means, TextView element in the first row, r1editText means
       EditText element in the first rows. This naming convention applies for following
       rows either.-->

    <TextView
            android:id="@+id/login"
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Login as:"
            android:textSize="20dp"/>

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="120px">


        <RadioButton
                android:id="@+id/radioCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logincustomer"
                android:checked="true"
                android:onClick="rbClick"/>

        <RadioButton
                android:id="@+id/radioCsr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logincsr"
                android:onClick="rbClick"
                android:layout_marginLeft="30px"/>

    </RadioGroup>


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px">

        <TextView
                android:id="@+id/r1textView"
                android:text="@string/username"
                android:textSize="20dp"
                android:layout_marginLeft="70px"/>

        <EditText
                android:id="@+id/r1editText"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:layout_marginLeft="50px"/>

    </TableRow>


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/r2textView"
                android:text="@string/password"
                android:textSize="20dp"
                android:layout_marginLeft="70px"/>

        <EditText
                android:id="@+id/r2editText"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:layout_marginLeft="50px">
        </EditText>
    </TableRow>


    <TableRow
            android:gravity="center_horizontal"
            android:layout_marginVertical="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/button1"
                android:text="@string/login"
                android:onClick="login"
                />
    </TableRow>

    <TableRow

            android:layout_marginVertical="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp">

        <Button

                android:id="@+id/signUpCostumer"
                android:text="@string/customer_sign_up"
                android:onClick="signUpCustomer"
                />

        <Button
                android:layout_gravity="center"
                android:id="@+id/signUpCsr"
                android:text="@string/csr_sign_up"
                android:onClick="signUpCsr"
                />
    </TableRow>

</TableLayout>