<?xml version="1.0" encoding="utf-8"?>

<!-- TableLayout declaration-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"

    tools:context=".model.welcomeCustomer"
    android:background="@android:color/holo_blue_light">

    <!--Welcome Message -->

    <ImageView
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:scaleY="0.9"
        android:src="@drawable/shoplogo" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/r1textView"
            android:text="Dear, "
            android:textSize="20dp"
            android:layout_marginLeft="70px" />

        <TextView
            android:id="@+id/userFullName"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:layout_marginLeft="50px" />

    </TableRow>


    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textSize="20dp"
        />


    <TextView
        android:id="@+id/orderdetails"
        android:layout_marginTop="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/orderdetails"
        android:textSize="20dp"
    />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_gravity="left"
        android:gravity="left"
    >

        <TextView
            android:id="@+id/shoeQuantity"
            android:text=""
            android:textSize="20dp"

        />

        <TextView
            android:id="@+id/pieces"
            android:layout_width="wrap_content"
            android:layout_marginEnd="90dp"

            android:paddingRight="30dp"
            android:text="@string/pieces"
            android:textAlignment="textStart"
            android:textSize="20dp"
        />

        <TextView
            android:paddingLeft="30dp"
            android:id="@+id/shoeSize"
            android:text=""
            android:textSize="20dp"
            android:layout_marginRight="-80px"
            />

        <TextView
            android:id="@+id/size"
            android:layout_marginRight="40px"
            android:text="@string/size"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/shoeType"
            android:text=""
            android:textSize="20dp"
            android:layout_marginRight="400px"
        />




    </TableRow>


</TableLayout>