<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewShoes"
        android:background="@android:color/holo_blue_light">


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/name"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewName"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:id="@+id/txtShoeName"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="Category"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewCategory"
                android:textSize="17sp"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCategory"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/size"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewSize"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:id="@+id/txtShoeSize"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/price"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewPrice"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:id="@+id/txtShoePrice"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveShoe"
                android:onClick="save"/>
    </TableRow>
</TableLayout>