<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditOrderActivity"
        android:background="@android:color/holo_blue_light">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingBottom="7sp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:text="Edit Order"
            android:layout_gravity="center"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/editOrder"
            android:textSize="20sp"/>

    </TableRow>


    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="Customer name:"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewName"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:id="@+id/txtCustomerName"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="Item name:"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewItemName"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:id="@+id/txtItemName"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/item_name"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewOrderDate"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:id="@+id/txtOrderDate"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/quantity"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewQuantity"
                android:textSize="17sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:id="@+id/txtQuantity"
                android:textSize="17sp"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingBottom="7sp"
            android:layout_marginStart="10sp">

        <TextView
                android:text="@string/status"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewStatus"
                android:textSize="17sp"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerStatusEditOrder"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveShoe"
                android:onClick="clickSave"/>
    </TableRow>

</TableLayout>